--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -12,7 +12,7 @@
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
     <div>
-        <button class="btn col2 btn-sm border-0 text-white me-1 col-1 mt-1" (click)="getAlumno()">Detalles</button>
+        <button class="btn col2 btn-sm border-0 text-white me-1 col-1 mt-" (click)="getAlumno()">Detalles</button>
     </div>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
