--- a/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
@@ -6,20 +6,21 @@
 
 <!-- Panel del admin -->
 <div class="mt-3 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Panel de Administración </h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center">Datos Personales (Baja)</h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
+    <div>
+        <button class="btn btn-primary btn-sm border-0 text-white me-1 col-1 mt-3" (click)="getAlumno()">Detalles</button>
+    </div>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
             <div class="col-2">Nombre</div>
             <div class="col-2">Primer Apellido</div>
             <div class="col-2">Segundo Apellido</div>
-            <div class="col-1">Editar</div>
-            <div class="col-2">Eliminar</div>
-            <div class="col-1">Detalles</div>
+            <div class="col">Activación</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
@@ -29,7 +30,7 @@
                 <div class="col-2">{{Alumno.nombres}}</div>
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
-                <button type="button" class="btn btn-primary btn-sm border-0 me-1 col-1 text-white mt-1">Activiar</button>
+                <button type="button" class="btn btn-primary btn-sm border-0 me-1 col text-white mt-3">Activiar</button>
             </div>
         </tbody>
     </table>
